--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "path-browserify": "^1.0.1",
     "react-color": "^2.19.3",
     "react-skinview3d": "^5.0.0",
+    "skinview3d": "^3.0.0-alpha.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "wagmi": "^0.7.13"
