--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "packageManager": "yarn@3.2.4",
   "dependencies": {
+    "@trendyol-js/react-carousel": "^3.0.0",
     "browserify-zlib": "^0.2.0",
     "connectkit": "^1.0.0",
     "ethers": "^5.7.2",
@@ -31,6 +32,7 @@
     "node-polyfill-webpack-plugin": "^2.0.1",
     "path-browserify": "^1.0.1",
     "react-color": "^2.19.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-skinview3d": "^5.0.0",
     "skinview3d": "^3.0.0-alpha.1",
     "stream-browserify": "^3.0.0",
