--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,18 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.7.2",
     "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/react": "^1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@oneclickdapp/ethereum-auth": "^0.4.2",
+    "@redwoodjs/auth": "3.3.1",
     "@redwoodjs/forms": "3.3.1",
     "@redwoodjs/router": "3.3.1",
     "@redwoodjs/web": "3.3.1",
     "framer-motion": "^6",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
