--- a/web/package.json
+++ b/web/package.json
@@ -19,10 +19,10 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@oneclickdapp/ethereum-auth": "^0.4.2",
-    "@redwoodjs/auth": "3.3.1",
-    "@redwoodjs/forms": "3.3.1",
-    "@redwoodjs/router": "3.3.1",
-    "@redwoodjs/web": "3.3.1",
+    "@redwoodjs/auth": "^3.6.1",
+    "@redwoodjs/forms": "^3.6.1",
+    "@redwoodjs/router": "^3.6.1",
+    "@redwoodjs/web": "^3.6.1",
     "framer-motion": "^6",
     "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
