--- a/.env.defaults
+++ b/.env.defaults
@@ -4,7 +4,7 @@
 # into version control.
 
 # schema.prisma defaults
-DATABASE_URL=file:./dev.db
+DATABASE_URL="postgresql://orthoverse:orthoverse@127.0.0.1:5432/orthoverse?schema=public"
 
 # location of the test database for api service scenarios (defaults to ./.redwood/test.db if not set)
 # TEST_DATABASE_URL=file:./.redwood/test.db
