--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "packageManager": "yarn@3.2.4",
   "dependencies": {
+    "axios": "^1.3.4",
     "browserify-zlib": "^0.2.0",
     "https-browserify": "^1.0.0",
     "jimp": "^0.16.2",
